--- a/index.html
+++ b/index.html
@@ -637,37 +637,27 @@
                     </p>
                 </div>
 			
-        <div class="row">
-
-        <div class="offset-lg-4 col-lg-4 offset-md-2 col-md-8">
-
-            <div class="form-group">
-
-                <input class="form-control" type="email" name="subscribe_email" placeholder="Enter your email address"
-                    required="required">
-
-            </div>
-
-        </div>
-
-            </div>
-
             <div class="row">
-
-            <div class=" col-lg-12 col-md-12  col-sm-12">
-			<p id="disclaimer">
-                Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of
-                like people so their privacy should be respected.
-            </p>
-
-            <div class="subscribe-accept">
-                <input type="checkbox" name="subscribe_accept" required="required">
-                I agree to the
-				<a href="./Myjourneyonline.com.html/privacy.html">Privacy Policy</a>,
-                <a href="./Myjourneyonline.com.html/disclaimer.html">Disclaimer</a>
-                and to receive newsletters from Practical HTML5 Projects for fun and Profit!
+                <div class="offset-lg-4 col-lg-4 offset-md-2 col-md-8">
+                    <div class="form-group">
+                        <input class="form-control" type="email" name="subscribe_email" placeholder="Enter your email address" required="required">
+			        </div>
+                </div>
             </div>
-            </div>
+            <div class="row">
+                <div class=" col-lg-12 col-md-12  col-sm-12">
+                    <div class="subscribe-accept">
+                        <input type="checkbox" name="subscribe_accept" required="required">
+                        I agree to the
+				        <a href="./Myjourneyonline.com.html/privacy.html">Privacy Policy</a>,
+                        <a href="./Myjourneyonline.com.html/disclaimer.html">Disclaimer</a>
+                        and to receive newsletters from Practical HTML5 Projects for fun and Profit!
+                    </div>
+			        <p id="disclaimer">
+                        Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of
+                        like people so their privacy should be respected.
+                    </p>
+                </div>
             </div>
 
             <a href="https://orris0.github.io/orris0/index.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
@@ -694,7 +684,8 @@
                 <!-- Template Main JS File -->
             <script src="../orris0/main.js"></script>
 			<a href="https://orris0.github.io/orris0/membership.html" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-                <div class="col-12">
+                
+				<div class="col-12">
 				    <p id="disclaimer">
                         Disclaimer! This service is not intended for the those with criminal intent. Celebrities are kind of like people so their privacy should be respected.
                     </p>
