--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Gallery-page-Templates</title>
+		<link rel="stylesheet" href="../../css/base.css" type="text/css" media="screen" charset="utf-8" />
+        <script src="../../lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <script type="text/javascript" src="script.js"></script>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <!-- Tree Pseudo-class Selectors -->
 		
@@ -29,7 +32,7 @@
         </style>
 		
         <!-- Viewport for responsive web design -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-9639638377144073">
     <meta property="og:title" content="A Basic HTML5 Template">
     <meta property="og:type" content="website">
