--- a/simplistic-html5.html
+++ b/simplistic-html5.html
@@ -12,7 +12,57 @@
     <!-- Describing about the page -->
     <!-- head section is communicating about the page to the browser -->
     <!-- Anything you write under head is not displayed on the browser content page. -->
-    <title>A Basic MT. Template #1 </title>
+    <title>Simplistic HTML5</title>
+<meta charset=utf-8>
+<style>
+body { width:500px; margin:auto;
+}
+header, nav, article, footer { display:block;
+}
+header { width:500px; background-color:#FF9966; text-align:center; margin:auto;
+}
+nav { float:left; width:25%; background-color: #FF9966; margin-bottom:10px;
+}
+article { float:right; width:70%; background-color:#FF9966; margin-bottom:10px;
+}
+footer { clear:both; background-color:#FF9966; text-align:center;
+}
+h2 { font-size:large; font-weight:bold; margin-top:0; margin-bottom:0;
+}
+</style>
+</head>
+<body>
+	<header class="data" id="html5style2header"><!-- <div id="hdr"> changed to <header> -->
+        <h1 id="html5style2h1">StarTrackr!</h1>
+        <div class="col-12">
+            <img class="logo" src="img/flexy-logo.png">
+            </div><!-- end-col-12 -->
+    </header>
+	<!--
+<header>
+<h1>header goes here</h1>
+</header>
+	<!--
+<nav>
+<ul>
+<li><a href="page-one.html" >Page One</a></li>
+<li><a href="page-two.html" >Page Two</a></li>
+<li><a href="index.html" >Home page</a></li>
+</ul>
+</nav>
+<article>
+<h2>Article</h2>
+Are you illiterate? Write today for free course.
+</article>
+<article>
+<h2>Another Article</h2>
+Stock up for Christmas. Limited to one per family.
+</article>
+<footer>
+Footer. Perhaps for a copyright statement
+</footer>
+</body>
+</html>
 	<!-- Viewport for responsive web design -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
