--- a/simplistic-html5.html
+++ b/simplistic-html5.html
@@ -17,6 +17,21 @@
     <meta property="og:image" content="image.png">
     <meta name="keywords" content="HTML5, Node.js, Jquery">
     <meta name="author" content="Orris Baker">
+    <!-- Viewport for responsive web design -->
+	<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
+    <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="./js/scripts.js"></script> 
+    <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
+    <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
+	<link rel="stylesheet" href="./style.css"> 
+    <link rel="stylesheet" href="./style[1].css"> 
+    <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
+	<link rel="stylesheet" href="./nav[1].css">
+    <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <link rel="stylesheet" href="./font-awesome.min[1].css">
+	<link rel="icon" type="image/png" href="./weed.jpg">
+	<link rel="icon" type="image/png" href="./flexy-logo.png">
     
 	<style>
         body { width:500px; margin:auto;
@@ -45,7 +60,7 @@
         <h1 id="html5style2h1">StarTrackr!</h1>
         <div class="col-12">
             <img class="logo" src="img/flexy-logo.png">
-            </div><!-- end-col-12 -->
+        </div><!-- end-col-12 -->
     </header>
 	<!--
     <header>
@@ -72,26 +87,17 @@
     </footer>
 </body>
 </html>
-	<!-- Viewport for responsive web design 
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="google-adsense-account" content="ca-pub-9639638377144073"> 
-        <meta property="og:title" content="A Basic HTML5 Template">
-        <meta property="og:type" content="website">
-        <meta property="og:description" content="A simple HTML5 Template for new projects.">
-        <meta property="og:image" content="image.png">
-        <meta name="keywords" content="HTML5, Node.js, Jquery">
-        <meta name="author" content="Orris Baker">
-		-->
+	<!-- Viewport for responsive web design --
 		<link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8">
 		<!-- <link rel="stylesheet" href="./CSS/HTML5-style-2.css" type="text/css" media="screen" charset="utf-8"> -->
-        <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
+        <!-- <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="./script.js"></script> 
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
 		<link rel="stylesheet" href="./style.css"> 
         <link rel="stylesheet" href="./style[1].css"> 
         <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css">
-	   
+	   -->
         <link rel="stylesheet" href="./nav[1].css">
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
