--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -97,13 +97,13 @@
 				<header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
 				    <hgroup>  
 					    <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit!</h1>
-						<h2 class="heading"><strong>StarTrackr!</strong id="html5-ch1-7h2"</h2>
+						<h2 class="heading"><strong>StarTrackr!</strong> id="html5-ch1-7h2"</h2>
 				    </hgroup>
 			    </header>
 	            
                     <!--close top section - content area starts -->
                 <div id="html5-ch1-7content">
-                    <h2>Award winning accommodation, self catering or bed and breakfast</h2><br class="clear">
+                    <h2 id="html5-ch1-7h2>Award winning accommodation, self catering or bed and breakfast</h2><br class="clear">
                     
 					<div id="html5-ch1-7leftcol">
                         <h3>Cottages, converted barns, caravans</h3><br class="clear">
