--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -75,6 +75,26 @@
     <body>
 		<div class="wrapper">
 			<div class="data" id="container">
+				<h2>Practical HTML5 Projects for fun and Profit!</h2>
+                <div class="row">
+                    <div class="col-12">
+                        <nav role="navigation" class="data" id="nav">
+                            <input class="trigger" type="checkbox" id="mainNavButton">
+                            <label for="mainNavButton" onclick>Menu</label>
+                            <ul>
+                                <li><a href="./index.html">chapter 1</a></li>
+                                <li><a href="./about.html">chapter 2</a></li>
+                                <li><a href="./membership.html">chapter 3</a></li>
+                                <li><a href="./news.html">chapter 4</a></li>
+                                <li><a href="./starter-page.html">chapter 5</a></li>
+						        <li><a href="./index[1].html">chapter 6</a></li>
+							    <li><a href="./index2.html">chapter 7</a></li>
+								<li><a href="./creating-a-website.html">chapter 8</a></li>
+                            </ul>
+                        </nav>
+                    </div><!-- col-12 -->
+                </div><!-- end-.row -->
+				<!--
 				<div class="row">
                     <div class="col-12">
                         <nav role="navigation" class="data" id="nav">
@@ -92,7 +112,7 @@
                             </ul>
                         </nav>
 						<img class="logo" src="img/flexy-logo.png">
-				    </div><!-- end-col-12 -->
+				    </div><!-- end-col-12 --
                 </div><!-- end-row -->
 				<header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
 				    <hgroup>  
