--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -76,11 +76,7 @@
 		<div class="wrapper">
 			<div class="data" id="container">
 				<img class="logo" src="img/flexy-logo.png">
-			   <!-- <header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -- 
-                    <div class="col-12">
-				        <h1 id="html5-ch1-7h1">StarTrackr!</h1>
-                    </div><!-- end-col-12 --
-                </header> -->
+			   
                 <div class="row">
                     <div class="col-12">
                         <nav role="navigation" id="nav">
@@ -98,6 +94,11 @@
                         </nav>
                     </div><!-- end .col-12 -->
                 </div><!-- end-.row -->
+				<header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> --> 
+                    <div class="col-12">
+				        <h1 id="html5-ch1-7h1">StarTrackr!</h1>
+                    </div><!-- end-col-12 -->
+                </header> 
 				<div class="row">
                     <div class="çol-12">
 				        <div class="data" id="html5-ch1-7leftcol">
