--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -75,8 +75,6 @@
     <body>
 		<div class="wrapper">
 			<div class="data" id="container">
-				
-			   
                 <div class="row">
                     <div class="col-12">
                         <nav role="navigation" id="nav">
@@ -100,6 +98,10 @@
 				        <h1 id="html5-ch1-7h1">StarTrackr!</h1>
                     </div><!-- end-col-12 -->
                 </header> 
+				<!--close top section - content area starts -->
+                <div id="content">
+                   <h2>Award winning accommodation, self catering or bed and breakfast</h2> 
+
 				<div class="row">
                     <div class="çol-12">
 				        <div class="data" id="html5-ch1-7leftcol">
