--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -75,6 +75,7 @@
 							
                             <input class="trigger" type="checkbox" id="mainNavButton">
                             <label for="mainNavButton" onclick>Menu</label>
+							<img class="logo" src="img/flexy-logo.png">
                             <ul>
                                 <li><a href="./index.html">Home</a></li>
                                 <li><a href="./about.html">About Us</a></li>
