--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -24,7 +24,7 @@
         <script type="text/javascript" src="jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
 	    <link rel="stylesheet" href="style.css"> 
-	    <link rel="stylesheet" href="nav[1].css">
+	   <!-- <link rel="stylesheet" href="nav[1].css"> -->
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="./font-awesome.min[1].css">
