--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -93,7 +93,7 @@
                     </div><!-- end-col-12 -->
                 </header> 
 				<!--close top section - content area starts -->
-                <div id="content">
+                <div id="html5-ch1-7content">
                    <h2>Award winning accommodation, self catering or bed and breakfast</h2> 
 
 				<div class="row">
