--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -85,6 +85,7 @@
 						        <li><a href="./index[1].html">About Us</a></li>
                             </ul>
                         </nav>
+						<img class="logo" src="./img/flexy-logo.png">
                     </div><!-- end .col-12 -->
                 </div><!-- end-.row -->
 				<header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> --> 
