--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -90,7 +90,10 @@
                 </div><!-- end-.row -->
 				<header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> --> 
                     <div class="col-12">
-				        <h1 id="html5-ch1-7h1">StarTrackr!</h1>
+						<hgroup>  
+					        <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">StarTrackr!</h1>
+						    <h2 class="heading"><strong>Practical HTML5 Projects for fun and Profit!</strong> </h2>
+				        </hgroup>  
                     </div><!-- end-col-12 -->
                 </header> 
 				<!--close top section - content area starts -->
