--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -84,7 +84,7 @@
                                 <li><a href="./creatingawebsite.html">Contact</a></li>
 						        <li><a href="./index[1].html">About Us</a></li>
                             </ul>
-                        </nav>
+                        </nav><br class="clear"><br class="clear"><br class="clear">
 						<img class="logo" src="./img/flexy-logo.png">
                     </div><!-- end .col-12 -->
                 </div><!-- end-.row -->
