--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -76,13 +76,13 @@
                             <label for="mainNavButton" onclick>Menu</label>
 							
                             <ul>
-                                <li><a href="./index.html">Home</a></li>
-                                <li><a href="./about.html">About Us</a></li>
-                                <li><a href="./membership.html">Products</a></li>
-                                <li><a href="./news.html">Blog</a></li>
-                                <li><a href="./starter-page.html">Specials</a></li>
-                                <li><a href="./creatingawebsite.html">Contact</a></li>
-						        <li><a href="./index[1].html">About Us</a></li>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="about.html">About Us</a></li>
+                                <li><a href="membership.html">Products</a></li>
+                                <li><a href="news.html">Blog</a></li>
+                                <li><a href="starter-page.html">Specials</a></li>
+                                <li><a href="creatingawebsite.html">Contact</a></li>
+						        <li><a href="HTML5-Ch1-7.html">About Us</a></li>
                             </ul>
                         </nav><br class="clear"><br class="clear"><br class="clear">
 						<img class="logo" src="./img/flexy-logo.png">
