--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -46,7 +46,7 @@ h1 { font-size:x-large; font-family:"times new roman"; text-align:center;
 }
 h2 {font-size:large; font-family:"times new roman"; text-align:center;
 }
-/*PAGE LAYOUT*/
+/*PAGE LAYOUT*
 body {margin:auto; width:970px;
 }
 header { width:970px;
