--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -92,8 +92,8 @@
                 <div class="col-12">
 					<header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
 						<hgroup>  
-					        <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">StarTrackr!</h1>
-						    <h2 class="heading"><strong>Practical HTML5 Projects for fun and Profit!</strong> </h2>
+					        <h1 class="veryimportant heading stuff" id="Practical HTML5 Projects for fun and Profit!</h1>
+						    <h2 class="heading"><strong>html5-ch1-7h1">StarTrackr!</strong> </h2>
 				        </hgroup>   
                     </header> 
 				</div><!-- end-col-12 -->
