--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -92,15 +92,15 @@
                 <div class="col-12">
 					<header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
 						<hgroup>  
-					        <h1 class="veryimportant heading stuff" id="Practical HTML5 Projects for fun and Profit!</h1>
-						    <h2 class="heading"><strong>StarTrackr!</strong> </h2>
+					        <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">"Practical HTML5 Projects for fun and Profit!</h1>
+						    <h2 class="heading" id="html5-ch1-7h2"><strong>StarTrackr!</strong> </h2>
 				        </hgroup>   
                     </header> 
 				</div><!-- end-col-12 -->
 				<!--close top section - content area starts -->
 				<div class="row">
                     <div class="çol-12" padding="2%">
-                        <h2 class="dark" id="html5-ch1-7h2"> Award winning accommodation, self catering or bed and breakfast</h2>
+                        <h2 class="dark"> Award winning accommodation, self catering or bed and breakfast</h2>
                     </div><!-- end-col-12 -->
                 </div><!-- end-row -->
 				
