--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -76,7 +76,6 @@
                         <nav role="navigation" class="data" id="nav">
                             <input class="trigger" type="checkbox" id="mainNavButton">
                             <label for="mainNavButton" onclick>Menu</label>
-							
                             <ul>
                                 <li><a href="index.html">Home</a></li>
                                 <li><a href="about.html">About Us</a></li>
@@ -90,14 +89,16 @@
 						<img class="logo" src="./img/flexy-logo.png">
                     </div><!-- end .col-12 -->
                 </div><!-- end-.row -->
-                <div class="col-12">
-					<header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
-						<hgroup>  
-					        <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">"Practical HTML5 Projects for fun and Profit!</h1>
-						    <h2 class="heading" id="html5-ch1-7h2"><strong>StarTrackr!</strong> </h2>
-				        </hgroup>   
-                    </header> 
-				</div><!-- end-col-12 -->
+				<div class="row">
+                    <div class="col-12">
+					    <header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
+						    <hgroup>  
+					            <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">"Practical HTML5 Projects for fun and Profit!</h1>
+						        <h2 class="heading" id="html5-ch1-7h2"><strong>StarTrackr!</strong> </h2>
+				            </hgroup>   
+                        </header> 
+				    </div><!-- end-col-12 -->
+				</div><!-- end-.row -->
 				<!--close top section - content area starts -->
 				<div class="row">
                     <div class="çol-12" padding="2%">
