--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -346,11 +346,14 @@
                     </header>
 			        -->
 		            <!-- assume chapter 1 before -->
-                <section id="gallery-page-
-validated">
-                    <header>
-                        <h1>A full page roll-over gallery of greetings cards</h1>
-                        <h2>Hover the mouse over a small picture to see an enlarged version</h2>
+                <section id="gallerypage">
+                    <header class="data" id="gallerypageheader">
+						<hgroup>  
+					        <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">"A full page roll-over gallery of greetings cards</h1>
+						    <h2 class="heading" id="html5-ch1-7h2"><strong>Hover the mouse over a small picture to see an enlarged version</strong> </h2>
+				        </hgroup>
+                        <!-- <h1>A full page roll-over gallery of greetings cards</h1> -->
+                       <!-- <h2>Hover the mouse over a small picture to see an enlarged version</h2> -->
                     </header>
 			        <nav>
                         <ul>
