--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -21,7 +21,8 @@
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="js/script.js"></script>
 		<script type="text/javascript" src="js/scripts.js"></script>
-<script type="text/JavaScript" src="jQuery.innerfade.js"></script>\
+<script type="text/JavaScript" src="jQuery.innerfade.js"></script>
+        <script src="jquery.innerfade.js" type="text/javascript" ></script>
         <script type="text/javascript" src="jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
 	    <link rel="stylesheet" href="style.css"> 
@@ -49,7 +50,7 @@
 	    <link rel="author" href="mailto:bakerorris0@gmail.comcom">
 	    <link rel="author" type="text/html" href="https://orris0.github.io/">
         <!-- Bootstrap Icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
         <!-- SimpleLightbox plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->                      
