--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -96,7 +96,7 @@
                 <div class="col-12">
 				    <header class="data" id="html5-style-2header"><!-- <div id="hdr"> changed to <header> -->
 						<hgroup>  
-					        <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">"Practical HTML5 Projects for fun and Profit!</h1>
+					        <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit!</h1>
 					        <h2 class="heading" id="html5-style-2"><strong>StarTrackr!</strong> </h2>
 			            </hgroup>   
                     </header> 
