--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -19,20 +19,20 @@
         <!-- Viewport for responsive web design -->
 	    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="js/script.js"></script>
+        <script type="text/javascript" src="../js/script.js"></script>
 		<script type="text/javascript" src="js/scripts.js"></script>
         <script type="text/JavaScript" src="jQuery.innerfade.js"></script>
         <script src="jquery.innerfade.js" type="text/javascript" ></script>
         <script type="text/javascript" src="jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
-	    <link rel="stylesheet" href="style.css"> 
-	    <link rel="stylesheet" href="nav[1].css">
+	    <link rel="stylesheet" href="../style.css"> 
+	    <link rel="stylesheet" href="../nav[1].css">
 		
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="./font-awesome.min[1].css">
-	    <link rel="icon" type="image/png" href="./weed.jpg">
-	    <link rel="icon" type="image/png" href="./flexy-logo.png">
+	    <link rel="icon" type="image/png" href="../weed.jpg">
+	    <link rel="icon" type="image/png" href="../flexy-logo.png">
         <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
         <link rel=”stylesheet” href=”http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css” />
         <!-- Font Awesome Icons -->
