--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -25,7 +25,7 @@
         <script src="jquery.innerfade.js" type="text/javascript" ></script>
         <script type="text/javascript" src="jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
-	    <link rel="stylesheet" href="../style.css"> 
+	    <link rel="stylesheet" href="style.css"> 
 	    <link rel="stylesheet" href="nav[1].css">
 		
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
