--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -32,6 +32,7 @@
 		<link rel="stylesheet" href="../CSS/HTML5-style-2.css">
 		<link rel="stylesheet" href="../CSS/nav-style.css">
 		<link rel="stylesheet" href="../CSS/starter-page-style-2.css">
+		<link rel="stylesheet" href="../CSS/starter-page-style.css">
 		
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
