--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -33,6 +33,11 @@
 		<link rel="stylesheet" href="../CSS/nav-style.css">
 		<link rel="stylesheet" href="../CSS/starter-page-style-2.css">
 		<link rel="stylesheet" href="../CSS/starter-page-style.css">
+		<link rel="stylesheet" href="../CSS/gallery-2col.css">
+		<link rel="stylesheet" href="../CSS/gallery-3col-mix.css">
+		<link rel="stylesheet" href="../CSS/gallery-one-col.css">
+		<link rel="stylesheet" href="../CSS/gallery-page-HTML5.css">
+		<link rel="stylesheet" href="../CSS/starter-page-style.css">
 		
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
