--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -51,6 +51,9 @@
 		<link rel="stylesheet" href="../CSS/squares-html5.css">
 		<link rel="stylesheet" href="../CSS/transparent.css">
 		<link rel="stylesheet" href="../CSS/gradient-pic.css">
+
+		<link rel="stylesheet" href="../CSS/equal-2d.css">
+		<link rel="stylesheet" href="../CSS/fixed-3d.css">
 		
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
