--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -54,6 +54,20 @@
 
 		<link rel="stylesheet" href="../CSS/equal-2d.css">
 		<link rel="stylesheet" href="../CSS/fixed-3d.css">
+		<link rel="stylesheet" href="../CSS/horiz-vert-menu.css">
+		<link rel="stylesheet" href="../CSS/ie-6-style.css">
+		<link rel="stylesheet" href="../CSS/inline-block.css">
+		<link rel="stylesheet" href="../CSS/inset-active.css">
+		<link rel="stylesheet" href="../CSS/main.css">
+		<link rel="stylesheet" href="../CSS/mainstyle.css">
+		<link rel="stylesheet" href="../CSS/nifty-tabs.css">
+		<link rel="stylesheet" href="../CSS/niftyCorners.css">
+		<link rel="stylesheet" href="../CSS/sliding.css">
+		<link rel="stylesheet" href="../CSS/squaretabs.css">
+		<link rel="stylesheet" href="../CSS/style-yosemite-2.css">
+		<link rel="stylesheet" href="../CSS/turquoise.css">
+		<link rel="stylesheet" href="../CSS/variable-2d.css">
+		<link rel="stylesheet" href="../CSS/variable-3d.css">
 		
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
