--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -68,6 +68,20 @@
 		<link rel="stylesheet" href="../CSS/turquoise.css">
 		<link rel="stylesheet" href="../CSS/variable-2d.css">
 		<link rel="stylesheet" href="../CSS/variable-3d.css">
+
+		<link rel="stylesheet" href="../CSS/position-video.css">
+
+		<link rel="stylesheet" href="../CSS/css3-tabs-ie.css">
+		<link rel="stylesheet" href="../CSS/css3-tabs.css">
+		<link rel="stylesheet" href="../CSS/niftyCorners.css">
+		<link rel="stylesheet" href="../CSS/style-fig3.css">
+		
+		<link rel="stylesheet" href="../CSS/position-video.css">
+		<link rel="stylesheet" href="../CSS/position-video.css">
+		<link rel="stylesheet" href="../CSS/position-video.css">
+		<link rel="stylesheet" href="../CSS/position-video.css">
+
+		
 		
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
