--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <title>Gallery-page-Templates</title>
         <meta charset=utf-8>
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="google-adsense-account" content="ca-pub-9639638377144073">
-	    <meta property="og:title" content="A Basic HTML5 Template">
+        <meta name="google-adsense-account" content="ca-pub-96 39638377144073">
+	    <meta property="og:title" content="A Basic HTML5 Tememplated9
         <meta property="og:type" content="website">
         <meta property="og:audio:type" content="audio/mpeg">
         <meta property="og:description" content="The abuse and mistreatment @ The BRC residential center, breaking-ground, The Travellers Hotel, The Andrews, The Kelly.">
