--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
      <!--   <link rel="stylesheet" href="style[1].css"> 
         <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css"> -->
 	    <link rel="stylesheet" href="nav[1].css">
+		<link rel="stylesheet" href="aos.css">
+
+		
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
         <link rel="stylesheet" href="font-awesome.min[1].css">
@@ -72,8 +75,8 @@
         
 		<!--Add conditional Javascript-->
 		<script src="AC_RunActiveContent.js"></script>
-		<script src="jquery-1.12.0.min.js"></script>
-		<script src="jquery-1.12.0.min.js"></script>
+		<script src="analytics.js"></script>
+		<script src="aos.js"></script>
 		<script src="jquery-1.12.0.min.js"></script>
 		<script src="jquery-1.12.0.min.js"></script>
 
